fixed the menu spacing in responsive

--- a/src/Acknowledge.css
+++ b/src/Acknowledge.css
@@ -33,7 +33,7 @@
     max-width: 300px;
     text-align: center;
     padding: 30px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     border-radius: 20px;
     background: #155E95;
     margin: 10px;
