--- a/src/Style.css
+++ b/src/Style.css
@@ -5,7 +5,12 @@
     background-color:white;
     }
 
-    
+   @media screen and (max-width:480px){
+   *{
+    margin: 0;
+    padding: 0;
+   }
+   } 
 
 /* -------------------------------------------team members------------------------------------------------ */
 
